--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-modal": "^1.5.2",
     "react-scripts": "3.0.1",
+    "react-toasts": "^3.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
