--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-horizontal-scrolling-menu": "^0.6.1",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
