--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-horizontal-scrolling-menu": "^0.6.1",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.0.3",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
     "react-router-modal": "^1.5.2",
     "react-scripts": "3.0.1",
