--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-horizontal-scrolling-menu": "^0.6.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-masonry-infinite": "^1.2.2",
     "react-redux": "^7.0.3",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
@@ -17,7 +18,8 @@
     "react-scripts": "3.0.1",
     "react-toasts": "^3.0.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.14"
   },
   "scripts": {
     "start": "react-scripts start",
