--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-horizontal-scrolling-menu": "^0.6.1",
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-infinite": "^1.2.2",
+    "react-modal": "^3.8.1",
     "react-redux": "^7.0.3",
     "react-responsive-carousel": "^3.1.49",
     "react-router-dom": "^5.0.0",
