--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.2",
+    "clipboard": "^2.0.4",
     "crypto-js": "^3.1.9-1",
     "lodash": "^4.17.11",
     "qrcode.react": "^0.9.3",
