--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.18.2",
     "clipboard": "^2.0.4",
     "crypto-js": "^3.1.9-1",
+    "html2canvas": "^1.0.0-rc.3",
     "lodash": "^4.17.11",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
